# fallment

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  compile_commands.json
demo/: CMakeLists.txt
demo/hiTriangle/: CMakeLists.txt
demo/hiTriangle/src/: hi_triangle.cc  hi_triangle.h  main.cc
demo/loadModel/: CMakeLists.txt
demo/loadModel/src/: loadModel.cc  loadModel.h  main.cc
src/app/: app.cc  app.h
src/camera/: camera.cc  camera.h
src/camera/cameraController/: orbitController.cc  orbitController.h
src/common/: defines.h
src/glBuffer/: buffer.h  frameBuffer.cc  frameBuffer.h  indexBuffer.cc  indexBuffer.h  multiSampleRenderBuffer.cc  multiSampleRenderBuffer.h  renderBuffer.cc  renderBuffer.h  vertexArray.cc  vertexArray.h  vertexBuffer.cc  vertexBuffer.h
src/lights/: lights.cc  lights.h
src/material/: default.glsl.h  material.cc  material.h  shader.cc  shader.h  shaderProgram.cc  shaderProgram.h
src/math/: vec3.h
src/model/: aabb.cc  aabb.h  mesh.cc  mesh.h  model.cc  model.h  object.cc  object.h
src/scene/: scene.h
src/texture/: colorBufferTexture.cc  colorBufferTexture.h  cubeMapTexture.cc  cubeMapTexture.h  depthTexture.cc  depthTexture.h  multiSampleTexture.cc  multiSampleTexture.h  texture.cc  texture.h
src/ui/: imgui_style.cc  imgui_style.h  ui.cc  ui.h
src/viewer/: viewer.cc  viewer.h
src/window/: window.h  wondow.cc
